--- a/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
+++ b/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
@@ -39,6 +39,15 @@
     <br />
 
     <h2>🔨 Small App #1: Click Counter</h2>
+
+    <h1 id='number'>0</h1>
+    <button id="addBtn">Add 1</button>
+    <button id="subtractBtn">Subtract 1</button>
+
+    <button id="resetBtn">Reset</button>
+
+
+
     <br />
 
 
