Real-Time Tip Calculator

--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -124,7 +124,7 @@
       <h3>Methods i</h3>
     </a>
     <a class="textUnderline" href="section_chatGPT_arrowfunction/">
-      <h3>Arrow function variations & usage</h3>
+      <h3>Arrow Function Variations & Usage</h3>
     </a>
     <hr>
     <br>
