--- a/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
+++ b/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
@@ -46,9 +46,45 @@
 
     <button id="resetBtn">Reset</button>
 
+    <br />
+    <br />
 
+    <hr />
 
     <br />
+    <br />
+
+    <input type="text" id="numInput" placeholder="Enter a number" />
+
+    <select id="multipliers">
+      <option value="1">x 1</option>
+      <option value="3">x 3</option>
+      <option value="5">x 5</option>
+    </select>
+    <h1 id='result'>0</h1>
+    <br />
+    <br />
+
+    <hr />
+
+    <br />
+    <br />
+    <div>
+      <input type="text" id="billTotal" placeholder="Enter your bill total here" />
+
+    </div>
+    <div>
+      <button id="btn10" class="selected">10%</button>
+      <button id="btn15">15%</button>
+      <button id="btn20">20%</button>
+    </div>
+      <br />
+
+        <h2 id='tipAmount'>Tip: $0</h2>
+
+        <h1 id='totalAmount'>Total: $0</h1>
+
+
 
 
 
