--- a/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
+++ b/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
@@ -70,19 +70,19 @@
     <br />
     <br />
     <div>
-      <input type="text" id="billTotal" placeholder="Enter your bill total here" />
+      <input type="text" id="totalInput" placeholder="Enter your bill total here" />
 
     </div>
-    <div>
+    <div id="tipPercentages">
       <button id="btn10" class="selected">10%</button>
       <button id="btn15">15%</button>
       <button id="btn20">20%</button>
     </div>
       <br />
 
-        <h2 id='tipAmount'>Tip: $0</h2>
+        <h2><span>Tip: $</span><span  id='tipAmount'>0</span></h2>
 
-        <h1 id='totalAmount'>Total: $0</h1>
+        <h1><span>Total: $</span><span  id='totalAmount'>0</span></h1>
 
 
 
