--- a/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
+++ b/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
@@ -78,14 +78,44 @@
       <button id="btn15">15%</button>
       <button id="btn20">20%</button>
     </div>
-      <br />
+    <br />
 
-        <h2><span>Tip: $</span><span  id='tipAmount'>0</span></h2>
+    <h2><span>Tip: $</span> <span id='tipAmount'>0</span></h2>
 
-        <h1><span>Total: $</span><span  id='totalAmount'>0</span></h1>
+    <h1><span>Total: $</span> <span id='totalAmount'>0</span></h1>
+
+
+    <br />
+    <br />
+
+    <hr />
+
+    <br />
+    <br />
+
+    <input type="text" id="numberInput" placeholder="Enter a number" />
+    <h2><span>x</span> <span id='multi2'>2</span></h2>
+    <h1><span>Result:</span> <span id='resultmulti2'>0</span></h1>
+    <br />
+    <br />
+
+    <hr />
+
+    <br />
+    <br />
+
+    <input type="text" id="inputA" placeholder="Enter a number 1" />
+    <span class="marginR"> + </span>
+    
+    <input type="text" id="inputB" placeholder="Enter a number 2" />
+    <h1><span>Result:</span> <span id='combineAB'>0</span></h1>
 
 
 
+    <br />
+    <br />
+    <br />
+    <br />
 
 
     <br />
