--- a/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
+++ b/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
@@ -106,10 +106,33 @@
 
     <input type="text" id="inputA" placeholder="Enter a number 1" />
     <span class="marginR"> + </span>
-    
+
     <input type="text" id="inputB" placeholder="Enter a number 2" />
     <h1><span>Result:</span> <span id='combineAB'>0</span></h1>
 
+    <br />
+    <br />
+
+    <hr />
+
+    <br />
+    <br />
+
+    <input type="text" id="input1stNumber" placeholder="Enter a number" />
+    <input type="text" id="input2ndNumber" placeholder="Enter an other number" />
+
+    <div>
+      <h3>Select a method</h3>
+
+      <button id="addition">+</button>
+      <button id="subtraction">−</button>
+      <button id="multiplication">×</button>
+      <button id="division">÷</button>
+    </div>
+
+
+
+    <h1><span>Result:</span> <span id='calcResult'>0</span></h1>
 
 
     <br />
