toggle active style on selected buttons

--- a/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
+++ b/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
@@ -134,6 +134,35 @@
 
     <h1><span>Result:</span> <span id='calcResult'>0</span></h1>
 
+    <br />
+    <br />
+
+    <hr />
+
+    <br />
+    <br />
+
+    <h1>Click Logger Test</h1>
+
+
+    <button id="btnRight">Click me the right way</button>
+    <button id="btnWrong">Click me the wrong way</button>
+    <button id="btnThird">Click me the wrong way</button>
+    <br />
+    <br />
+
+    <hr />
+
+    <br />
+    <br />
+<div id="operators">
+  <button class="opBtn active">+</button>
+  <button class="opBtn">−</button>
+  <button class="opBtn">×</button>
+  <button class="opBtn">÷</button>
+</div>
+
+
 
     <br />
     <br />
