toggle active style on selected buttons

--- a/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
+++ b/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
@@ -155,12 +155,12 @@
 
     <br />
     <br />
-<div id="operators">
-  <button class="opBtn active">+</button>
-  <button class="opBtn">−</button>
-  <button class="opBtn">×</button>
-  <button class="opBtn">÷</button>
-</div>
+    <div id="operators">
+      <button class="opBtn">+</button>
+      <button class="opBtn">−</button>
+      <button class="opBtn">×</button>
+      <button class="opBtn">÷</button>
+    </div>
 
 
 
