buttons with feedback

--- a/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
+++ b/templates/javascript-learning/section_chatGPT_mental_model_i/index.html
@@ -161,15 +161,29 @@
       <button class="opBtn">×</button>
       <button class="opBtn">÷</button>
     </div>
+    <br />
+    <br />
+    <hr />
+    <br />
+    <br />
+    <div id="btnABC">
+      <button class="letterBtn">A</button>
+      <button class="letterBtn">B</button>
+      <button class="letterBtn">C</button>
+
+    </div>
+
 
 
 
     <br />
     <br />
     <br />
+
     <br />
-
-
+    <br />
+    <br />
+    <br />
     <br />
     <br />
   </div>
