--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -49,8 +49,11 @@
     <br>
     <br>
     <h1>Practice with ChatGPT - Mental Model Building</h1>
-    <a class="textUnderline" href="section_chatGPT_mental_model_i/">
-      <h3>Mental Model Building i</h3>
+    <a class="textUnderline" href="section_chatGPT_mini_project_ii/">
+      <h3>Mini Projects ii</h3>
+    </a>
+    <a class="textUnderline" href="section_chatGPT_mini_project_i/">
+      <h3>Mini Projects i</h3>
     </a>
     <hr>
     <br>
