--- a/templates/javascript-learning/section_chatGPT_mini_project_ii/index.html
+++ b/templates/javascript-learning/section_chatGPT_mini_project_ii/index.html
@@ -25,9 +25,16 @@
 
     <br />
 
-    <h2>Challenge: </h2>
-    <br />
+    <h2>Character Counter </h2>
+    <label for="textarea">Note:</label>
+    <textarea id="textarea" rows="4" cols="50">
 
+
+    </textarea>
+    <h5 id="feedback"></h5>
+
+
+    <br />
 
 
 
