--- a/templates/javascript-learning/section_chatGPT_mini_project_ii/index.html
+++ b/templates/javascript-learning/section_chatGPT_mini_project_ii/index.html
@@ -32,9 +32,35 @@
 
     </textarea>
     <h5 id="feedback"></h5>
+    <br />
 
+    <hr />
 
     <br />
+
+    <br />
+    <h2>Accordion </h2>
+
+<div class="accordion">
+  <div class="accordion-item">
+    <h3 class="accordion-header">Section 1</h3>
+    <div class="accordion-content">
+      <p>This is the content for section 1.</p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h3 class="accordion-header">Section 2</h3>
+    <div class="accordion-content">
+      <p>This is the content for section 2.</p>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h3 class="accordion-header">Section 3</h3>
+    <div class="accordion-content">
+      <p>This is the content for section 3.</p>
+    </div>
+  </div>
+</div>
 
 
 
