Button Group Color Toggl

--- a/templates/javascript-learning/section_chatGPT_mini_project_ii/index.html
+++ b/templates/javascript-learning/section_chatGPT_mini_project_ii/index.html
@@ -41,30 +41,41 @@
     <br />
     <h2>Accordion </h2>
 
-<div class="accordion">
-  <div class="accordion-item">
-    <h3 class="accordion-header">Section 1</h3>
-    <div class="accordion-content">
-      <p>This is the content for section 1.</p>
+    <div class="accordion">
+      <div class="accordion-item">
+        <h3 class="accordion-header">Section 1</h3>
+        <div class="accordion-content">
+          <p>This is the content for section 1.</p>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h3 class="accordion-header">Section 2</h3>
+        <div class="accordion-content">
+          <p>This is the content for section 2.</p>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h3 class="accordion-header">Section 3</h3>
+        <div class="accordion-content">
+          <p>This is the content for section 3.</p>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="accordion-item">
-    <h3 class="accordion-header">Section 2</h3>
-    <div class="accordion-content">
-      <p>This is the content for section 2.</p>
+    <br />
+    <hr />
+    <br />
+    <br />
+    <h2>🧩 Mini Practice: Button Group Color Toggle </h2>
+
+    <div id="colorControls">
+      <button class="colorBtn" data-color="red">Red</button>
+      <button class="colorBtn" data-color="blue">Blue</button>
+      <button class="colorBtn" data-color="green">Green</button>
     </div>
-  </div>
-  <div class="accordion-item">
-    <h3 class="accordion-header">Section 3</h3>
-    <div class="accordion-content">
-      <p>This is the content for section 3.</p>
-    </div>
-  </div>
-</div>
 
-
-
-
+    <div class="textBox">Box 1</div>
+    <div class="textBox">Box 2</div>
+    <div class="textBox">Box 3</div>
 
     <br />
     <br />
