--- a/templates/javascript-learning/section_chatGPT_mini_project_ii/index.html
+++ b/templates/javascript-learning/section_chatGPT_mini_project_ii/index.html
@@ -1,102 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Mini Projects ii</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Mini Projects ii</title>
+    <!-- Google Font Preconnect-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-  <!-- Google Font Preconnect-->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Google Font Preconnect-->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap"
+      rel="stylesheet"
+    />
+    <!--sitewide font-family: 'Lato', sans-serif; -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-  <!-- Google Font Preconnect-->
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap" rel="stylesheet" />
-  <!--sitewide font-family: 'Lato', sans-serif; -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
-</head>
+  <body class="wrapper">
+    <div class="marginS">
+      <h1>Practice with ChatGPT: Mini Projects ii</h1>
 
-<body class="wrapper">
-  <div class="marginS">
-    <h1>Practice with ChatGPT: Mini Projects ii</h1>
+      <hr />
 
-    <hr />
+      <br />
 
-    <br />
+      <h2>Character Counter</h2>
+      <label for="textarea">Note:</label>
+      <textarea id="textarea" rows="4" cols="50"> </textarea>
+      <h5 id="feedback"></h5>
+      <br />
 
-    <h2>Character Counter </h2>
-    <label for="textarea">Note:</label>
-    <textarea id="textarea" rows="4" cols="50">
+      <hr />
 
+      <br />
 
-    </textarea>
-    <h5 id="feedback"></h5>
-    <br />
+      <br />
+      <h2>Accordion</h2>
 
-    <hr />
-
-    <br />
-
-    <br />
-    <h2>Accordion </h2>
-
-    <div class="accordion">
-      <div class="accordion-item">
-        <h3 class="accordion-header">Section 1</h3>
-        <div class="accordion-content">
-          <p>This is the content for section 1.</p>
+      <div class="accordion">
+        <div class="accordion-item">
+          <h3 class="accordion-header">Section 1</h3>
+          <div class="accordion-content">
+            <p>This is the content for section 1.</p>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h3 class="accordion-header">Section 2</h3>
+          <div class="accordion-content">
+            <p>This is the content for section 2.</p>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h3 class="accordion-header">Section 3</h3>
+          <div class="accordion-content">
+            <p>This is the content for section 3.</p>
+          </div>
         </div>
       </div>
-      <div class="accordion-item">
-        <h3 class="accordion-header">Section 2</h3>
-        <div class="accordion-content">
-          <p>This is the content for section 2.</p>
-        </div>
+      <br />
+      <hr />
+      <br />
+      <br />
+      <h2>🧩 Mini Practice: Button Group Color Toggle</h2>
+
+      <div id="colorControls">
+        <button class="colorBtn" data-color="red">Red</button>
+        <button class="colorBtn" data-color="blue">Blue</button>
+        <button class="colorBtn" data-color="green">Green</button>
       </div>
-      <div class="accordion-item">
-        <h3 class="accordion-header">Section 3</h3>
-        <div class="accordion-content">
-          <p>This is the content for section 3.</p>
-        </div>
-      </div>
+
+      <div class="textBox">Box 1</div>
+      <div class="textBox">Box 2</div>
+      <div class="textBox">Box 3</div>
+
+      <br />
+      <hr />
+      <br />
+      <br />
+      <h2>🧩 Mini Exercise: Toggle Visibility on Items</h2>
+      <button id="toggleBtn">Toggle Items</button>
+
+      <div class="item">🍎 Apple</div>
+      <div class="item">🍌 Banana</div>
+      <div class="item">🍇 Grape</div>
+      <br />
+      <hr />
+      <br />
+      <br />
+
+      <h2>🧩 Mini Challenge: Emoji Highlighter</h2>
+
+      <div class="item">🍎 Apple</div>
+      <div class="item">🍌 Banana</div>
+      <div class="item">🍇 Grape</div>
+
+      <br />
+      <br />
+      <br />
+
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
+      <br />
     </div>
-    <br />
+
     <hr />
-    <br />
-    <br />
-    <h2>🧩 Mini Practice: Button Group Color Toggle </h2>
 
-    <div id="colorControls">
-      <button class="colorBtn" data-color="red">Red</button>
-      <button class="colorBtn" data-color="blue">Blue</button>
-      <button class="colorBtn" data-color="green">Green</button>
-    </div>
+    <!-- ==================== links ===================== -->
 
-    <div class="textBox">Box 1</div>
-    <div class="textBox">Box 2</div>
-    <div class="textBox">Box 3</div>
+    <link rel="stylesheet" href="../main.css" />
+    <link rel="stylesheet" href="style.css" />
 
-    <br />
-    <br />
-    <br />
-
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-  </div>
-
-  <hr />
-
-  <!-- ==================== links ===================== -->
-
-  <link rel="stylesheet" href="../main.css" />
-  <link rel="stylesheet" href="style.css" />
-
-  <script src="script.js"></script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
