--- a/templates/javascript-learning/section_chatGPT_mini_project_iii/index.html
+++ b/templates/javascript-learning/section_chatGPT_mini_project_iii/index.html
@@ -19,19 +19,21 @@
 
 <body class="wrapper">
   <div class="marginS">
-    <h1>🧩 Mini Project: Counter with Reset</h1>
+    <h1>Practice with ChatGPT: Mini Projects iii</h1>
 
 
     <hr />
 
     <br />
 
-    <h2>Character Counter</h2>
+    <h2>🧩 Mini Project: Counter with Reset</h2>
     <h2>Counter</h2>
     <p id="display">0</p>
     <button id="addBtn">Add 1</button>
-    <button id="resetBtn">Reset</button>
+    <button id="reduceBtn">reduce 1</button>
 
+    <button id="resetBtn">Reset</button>
+    <p id='feedback'>Out of range</p>
 
 
 
