--- a/templates/javascript-learning/section_chatGPT_mini_project_iii/index.html
+++ b/templates/javascript-learning/section_chatGPT_mini_project_iii/index.html
@@ -32,8 +32,9 @@
     <button id="addBtn">Add 1</button>
     <button id="reduceBtn">reduce 1</button>
 
+
     <button id="resetBtn">Reset</button>
-    <p id='feedback'>Out of range</p>
+    <p id='feedback' class="hidden">Out of range</p>
 
 
 
