--- a/templates/javascript-learning/section_chatGPT_mini_project_iii/index.html
+++ b/templates/javascript-learning/section_chatGPT_mini_project_iii/index.html
@@ -26,18 +26,20 @@
 
     <br />
 
-    <h2>🧩 Mini Project: Counter with Reset</h2>
-    <h2>Counter</h2>
-    <p id="display">0</p>
-    <button id="addBtn">Add 1</button>
-    <button id="reduceBtn">reduce 1</button>
+<h2>🧩 Mini Project: Counter with Progress Bar</h2>
+<h2>Counter</h2>
+<p id="display">0</p>
 
+<div id="progressContainer">
+  <div id="progressBar"></div>
+</div>
 
-    <button id="resetBtn">Reset</button>
-    <p id='feedback' class="hidden">Out of range</p>
+<button id="reduceBtn">Reduce 1</button>
+<button id="addBtn">Add 1</button>
 
+<button id="resetBtn">Reset</button>
 
-
+<p id="feedback" class="hidden">Out of range</p>
 
     <br />
 
