--- a/templates/javascript-learning/section_chatGPT_mini_project_iii/style.css
+++ b/templates/javascript-learning/section_chatGPT_mini_project_iii/style.css
@@ -4,3 +4,20 @@
 .shown{
   display: block;
 }
+
+
+#progressContainer {
+  width: 100%;
+  height: 20px;
+  background-color: #eee;
+  margin: 10px 0;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+#progressBar {
+  height: 100%;
+  width: 0%;
+  background-color: green;
+  transition: width 0.3s ease;
+}
