--- a/templates/javascript-learning/section_chatGPT_mini_project_iii/index.html
+++ b/templates/javascript-learning/section_chatGPT_mini_project_iii/index.html
@@ -26,28 +26,49 @@
 
     <br />
 
-<h2>🧩 Mini Project: Counter with Progress Bar</h2>
-<h2>Counter</h2>
-<p id="display">0</p>
+    <h2>🧩 Mini Project: Counter with Progress Bar</h2>
+    <h2>Counter</h2>
+    <p id="display">0</p>
 
-<div id="progressContainer">
-  <div id="progressBar"></div>
-</div>
+    <div id="progressContainer">
+      <div id="progressBar"></div>
+    </div>
 
-<button id="reduceBtn">Reduce 1</button>
-<button id="addBtn">Add 1</button>
+    <button id="reduceBtn">Reduce 1</button>
+    <button id="addBtn">Add 1</button>
 
-<button id="resetBtn">Reset</button>
+    <button id="resetBtn">Reset</button>
 
-<p id="feedback" class="hidden">Out of range</p>
-
-    <br />
-
+    <p id="feedback" class="hidden">Out of range</p>
 
     <br />
+    <br />
+    <br />
+    <hr />
 
     <br />
+    <br />
+    <br />
 
+    <div class="align-left column">
+      <label for="volume">Volume:</label>
+      <input type="range" id="volume" min="0" max="100" value="50">
+      <p>Current Volume: <span id="volumeValue">50</span>%</p>
+    </div>
+    <br />
+    <br />
+    <br />
+    <hr />
+
+    <br />
+    <br />
+    <br />
+    <h2>💡 Light Panel</h2>
+    <div class="panel">
+      <div class="light"></div>
+      <div class="light"></div>
+      <div class="light"></div>
+    </div>
 
 
     <br />
