--- a/templates/javascript-learning/section_chatGPT_mini_project_iii/index.html
+++ b/templates/javascript-learning/section_chatGPT_mini_project_iii/index.html
@@ -59,16 +59,27 @@
     <br />
     <br />
     <hr />
-
     <br />
     <br />
     <br />
-    <h2>💡 Light Panel</h2>
-    <div class="panel">
+    <h2>💡 Light Panel (radio button)</h2>
+    <div class="">
       <div class="light"></div>
       <div class="light"></div>
       <div class="light"></div>
     </div>
+    <br />
+    <br />
+    <br />
+    <hr />
+    <br />
+    <br />
+    <br />
+    <h2>💡 Light Panel (toggle)</h2>
+
+    <div class="panel">Light 1</div>
+    <div class="panel">Light 2</div>
+    <div class="panel">Light 3</div>
 
 
     <br />
