--- a/templates/javascript-learning/section_chatGPT_mini_project_iii/style.css
+++ b/templates/javascript-learning/section_chatGPT_mini_project_iii/style.css
@@ -22,3 +22,33 @@
   transition: width 0.3s ease;
 }
 
+.light {
+  width: 50px;
+  height: 50px;
+  background-color: gray;
+  border-radius: 50%;
+  display: inline-block;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.light.on {
+  background-color: yellow;
+}
+.panel {
+  width: 100px;
+  height: 100px;
+  background-color: grey;
+  margin: 10px;
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+  line-height: 100px;
+  color: white;
+  font-weight: bold;
+}
+
+.on1 {
+  background-color: yellow;
+  color: black;
+}
