👁️ Password Reveal Toggle

--- a/templates/javascript-learning/section_chatGPT_mini_project_iii/index.html
+++ b/templates/javascript-learning/section_chatGPT_mini_project_iii/index.html
@@ -21,7 +21,6 @@
   <div class="marginS">
     <h1>Practice with ChatGPT: Mini Projects iii</h1>
 
-
     <hr />
 
     <br />
@@ -52,7 +51,7 @@
 
     <div class="align-left column">
       <label for="volume">Volume:</label>
-      <input type="range" id="volume" min="0" max="100" value="50">
+      <input type="range" id="volume" min="0" max="100" value="50" />
       <p>Current Volume: <span id="volumeValue">50</span>%</p>
     </div>
     <br />
@@ -81,6 +80,39 @@
     <div class="panel">Light 2</div>
     <div class="panel">Light 3</div>
 
+    <br />
+    <br />
+    <br />
+    <hr />
+    <br />
+    <br />
+    <br />
+
+    <h2>⭐ Star Rating</h2>
+    <div id="rating">
+      <span class="star">☆</span>
+      <span class="star">☆</span>
+      <span class="star">☆</span>
+      <span class="star">☆</span>
+      <span class="star">☆</span>
+    </div>
+    <p id="feedbackStar"></p>
+    <br />
+    <br />
+    <br />
+    <hr />
+    <br />
+    <br />
+    <br />
+
+    <h2>🧩 Color Picker Squares</h2>
+
+    <div id="box">🎨</div>
+
+    <button class="colorBtn" data-color="red">Red</button>
+    <button class="colorBtn" data-color="blue">Blue</button>
+    <button class="colorBtn" data-color="green">Green</button>
+    <audio id="clickSound" src="mixkit-select-click-1109.wav" preload="auto"></audio>
 
     <br />
     <br />
