--- a/templates/javascript-learning/section_chatGPT_mini_project_iii/style.css
+++ b/templates/javascript-learning/section_chatGPT_mini_project_iii/style.css
@@ -52,3 +52,19 @@
   background-color: yellow;
   color: black;
 }
+
+#box {
+  width: 200px;
+  height: 200px;
+  margin-bottom: 10px;
+  background-color: grey;
+}
+@keyframes pop {
+  0%   { transform: scale(1);   opacity: 1; }
+  50%  { transform: scale(1.1); opacity: 0.7; }
+  100% { transform: scale(1);   opacity: 1; }
+}
+
+.animate {
+  animation: pop 0.3s ease;
+}
