--- a/templates/javascript-learning/section_chatGPT_mini_project_iv/index.html
+++ b/templates/javascript-learning/section_chatGPT_mini_project_iv/index.html
@@ -32,12 +32,31 @@
     <hr />
 
     <br />
-        <h2>👁️ Password Reveal Toggle </h2>
+    <h2>👁️ Password Reveal Toggle </h2>
 
     <label for="passwordInput">Password:</label>
     <input type="password" id="passwordInput">
     <button id="toggleBtn">Show</button>
 
+    <hr />
+
+    <br />
+
+    <h2>🔒 Secret Message Toggle</h2>
+    <button id="toggleSecretBtn">Show Message</button>
+    <p id="secretMessage" class="hidden">🎉 This is the secret!</p>
+
+    <hr />
+
+    <br />
+
+
+
+    <h2>🔐 Unlock the Box</h2>
+    <input id="passwordInput1" type="password" placeholder="Enter password" />
+    <button id="unlockBtn">Unlock</button>
+    <p id="box" class="hidden">🎁 You unlocked the box!</p>
+    <p id="feedback" class="hidden">❌ Incorrect password</p>
 
     <br />
     <br />
