--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -49,6 +49,9 @@
     <br>
     <br>
     <h1>Practice with ChatGPT - Mental Model Building</h1>
+        <a class="textUnderline" href="section_chatGPT_mini_project_iv/">
+      <h3>Mini Projects iv</h3>
+    </a>
     <a class="textUnderline" href="section_chatGPT_mini_project_iii/">
       <h3>Mini Projects iii</h3>
     </a>
