--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -48,8 +48,18 @@
     <hr>
     <br>
     <br>
+    <h1>ChatGPT Practice — Mastering the Basics</h1>
+
+    <a class="textUnderline" href="section_chatGPT_p1/">
+      <h3>Projects 1</h3>
+    </a>
+
+    <hr>
+    <br>
+    <br>
+
     <h1>Practice with ChatGPT - Mental Model Building</h1>
-        <a class="textUnderline" href="section_chatGPT_mini_project_iv/">
+    <a class="textUnderline" href="section_chatGPT_mini_project_iv/">
       <h3>Mini Projects iv</h3>
     </a>
     <a class="textUnderline" href="section_chatGPT_mini_project_iii/">
