--- a/templates/javascript-learning/section_chatGPT_p1/index.html
+++ b/templates/javascript-learning/section_chatGPT_p1/index.html
@@ -12,13 +12,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
   <!-- Google Font Preconnect-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap" rel="stylesheet" />
   <!--sitewide font-family: 'Lato', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
 </head>
 
 <body class="wrapper">
@@ -32,7 +28,9 @@
     <h2>🔐 Login</h2>
     <input id="passwordInput" type="password" placeholder="Enter password" />
     <button id="submitBtn">Submit</button>
+    <div id="spinner" class="hidden">⏳</div>
     <p id="statusText"></p>
+
     <hr />
 
     <br />
