--- a/templates/javascript-learning/section_chatGPT_p1/index.html
+++ b/templates/javascript-learning/section_chatGPT_p1/index.html
@@ -28,7 +28,10 @@
     <h2>🔐 Login</h2>
     <input id="passwordInput" type="password" placeholder="Enter password" />
     <button id="submitBtn">Submit</button>
-    <div id="spinner" class="hidden">⏳</div>
+
+    <!-- Spinner container -->
+    <div id="spinner" class="hidden spinner"></div>
+
     <p id="statusText"></p>
 
     <hr />
