--- a/templates/javascript-learning/section_chatGPT_p1/index.html
+++ b/templates/javascript-learning/section_chatGPT_p1/index.html
@@ -37,6 +37,12 @@
     <hr />
 
     <br />
+    <ul id="sortable-list">
+      <li draggable="true">🍎 Apple</li>
+      <li draggable="true">🍌 Banana</li>
+      <li draggable="true">🍇 Grape</li>
+      <li draggable="true">🍓 Strawberry</li>
+    </ul>
 
     <br />
     <br />
