--- a/templates/javascript-learning/section_chatGPT_p1/index.html
+++ b/templates/javascript-learning/section_chatGPT_p1/index.html
@@ -37,6 +37,8 @@
     <hr />
 
     <br />
+    <h2>Drag & Drop</h2>
+
     <ul id="sortable-list">
       <li draggable="true">🍎 Apple</li>
       <li draggable="true">🍌 Banana</li>
