Drag & Drop Step by Step

--- a/templates/javascript-learning/section_chatGPT_p1/index.html
+++ b/templates/javascript-learning/section_chatGPT_p1/index.html
@@ -46,6 +46,17 @@
       <li draggable="true">🍓 Strawberry</li>
     </ul>
 
+
+    <hr />
+    <br />
+    <h2>Step 2: Drag into Drop Zone</h2>
+    <!-- <div id="dragBox" draggable="true">🧱 Drag me</div>
+    <div id="dropZone">⬇️ Drop here</div> -->
+
+    <div class="drop-zone">Drop here</div>
+
+    <div class="draggable" draggable="true">Drag me</div>
+
     <br />
     <br />
     <br />
