--- a/templates/javascript-learning/section_chatGPT_p2/index.html
+++ b/templates/javascript-learning/section_chatGPT_p2/index.html
@@ -19,60 +19,28 @@
 
 <body class="wrapper">
   <div class="marginS">
-    <h1>Project 1</h1>
+    <h1>Project 2 - still drag and drop</h1>
 
 
     <hr />
 
     <br />
-    <h2>🔐 Login</h2>
-    <input id="passwordInput" type="password" placeholder="Enter password" />
-    <button id="submitBtn">Submit</button>
-
-    <!-- Spinner container -->
-    <div id="spinner" class="hidden spinner"></div>
-
-    <p id="statusText"></p>
-
-    <hr />
-
-    <br />
-    <h2>Drag & Drop</h2>
-
-    <ul id="sortable-list">
-      <li draggable="true">🍎 Apple</li>
-      <li draggable="true">🍌 Banana</li>
-      <li draggable="true">🍇 Grape</li>
-      <li draggable="true">🍓 Strawberry</li>
-    </ul>
-
-
-    <hr />
-    <br />
-    <h2>Drag into Drop Zone</h2>
-    <div id="dragBox" draggable="true">🧱 Drag me</div>
-    <div id="dropZone">⬇️ Drop here</div>
+    
 
     <br />
     <br />
     <br />
 
+<h2>🧩 Drag and Drop (Works for Multiple Items)</h2>
 
-    <div class="drop-zone">Drop here</div>
+<div class="draggables">
+  <div class="draggable" draggable="true">🍎 Apple</div>
+  <div class="draggable" draggable="true">🍌 Banana</div>
+  <div class="draggable" draggable="true">🍇 Grape</div>
+</div>
 
-    <div class="draggable" draggable="true">Drag me</div>
+<div class="drop-zone">⬇️ Drop Here</div>
 
-    <hr />
-    <br />
-    <h2>Multi-Itmes Drag into Drop Zone</h2>
-
-    <div class="items">
-      <div class="draggable" draggable="true">🍎 Apple</div>
-      <div class="draggable" draggable="true">🍌 Banana</div>
-      <div class="draggable" draggable="true">🍇 Grape</div>
-    </div>
-
-    <div class="drop-zone">Drop here</div>
     <hr />
     <br />
 
