--- a/templates/javascript-learning/section_chatGPT_p2/index.html
+++ b/templates/javascript-learning/section_chatGPT_p2/index.html
@@ -19,31 +19,30 @@
 
 <body class="wrapper">
   <div class="marginS">
-    <h1>Project 2 - still drag and drop</h1>
+    <h1>Project 2 - Drag and Drop 2</h1>
 
 
     <hr />
 
     <br />
-    
+
 
     <br />
     <br />
     <br />
 
-<h2>🧩 Drag and Drop (Works for Multiple Items)</h2>
+    <h2>🧩 Drag and Drop (Works for Multiple Items)</h2>
 
-<div class="draggables">
-  <div class="draggable" draggable="true">🍎 Apple</div>
-  <div class="draggable" draggable="true">🍌 Banana</div>
-  <div class="draggable" draggable="true">🍇 Grape</div>
-</div>
 
-<div class="drop-zone">⬇️ Drop Here</div>
+    <h3>Source Items</h3>
+    <div class="draggables">
+      <div class="draggable" draggable="true">🍎 Apple</div>
+      <div class="draggable" draggable="true">🍌 Banana</div>
+      <div class="draggable" draggable="true">🍇 Grape</div>
+    </div>
 
-    <hr />
-    <br />
-
+    <h3>Dropped Zone</h3>
+    <div class="drop-zone">⬇️ Drop items here</div>
 
 
     <br />
