--- a/templates/javascript-learning/section_chatGPT_p2/style.css
+++ b/templates/javascript-learning/section_chatGPT_p2/style.css
@@ -24,3 +24,11 @@
   background-color: #f0f0f0;
   border-color: dodgerblue;
 }
+
+
+.remove-btn {
+  margin-left: 10px;
+  cursor: pointer;
+  color: red;
+  font-weight: bold;
+}
