--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -49,7 +49,9 @@
     <br>
     <br>
     <h1>ChatGPT Practice — Mastering the Basics</h1>
-
+    <a class="textUnderline" href="section_chatGPT_p2/">
+      <h3>Projects 2</h3>
+    </a>
     <a class="textUnderline" href="section_chatGPT_p1/">
       <h3>Projects 1</h3>
     </a>
